@@ -5,7 +5,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>fairy programing interface</title>
-<link href="style/default.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 <p>fairy programming interface</p>
@@ -163,8 +162,8 @@ out_segment_stream|</code>
 <dt><a name="label-31" id="label-31"><code>fairy#def_pool_variable(<var>var</var>, <var>value</var>)</code></a></dt><!-- RDLabel: "fairy#def_pool_variable" -->
 <dd>
 <p>fairy#def_pool_variable(var, :block =&gt; %{...})</p>
-<p><var>var</var>プール変数名.
-各フィルタで共有できるプール変数を定義する.
+<p><var>var</var>プール変数名.</p>
+<p>各フィルタで共有できるプール変数を定義する.
 ブロックソースが渡された場合は, コントローラ側でブロックを評価し, 
 その値を代入する.
 <var>value</var>はディープコピーされる.</p></dd>
